--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,3 +16,31 @@
 .error {
   color: red;
 }
+.push-down {
+  margin-top: 20px;
+}
+html {
+position: relative;
+min-height: 100%;
+}
+body {
+/* Margin bottom by footer height */
+margin-bottom: px;
+}
+.footer {
+position: absolute;
+bottom: 0;
+width: 100%;
+/* Set the fixed height of the footer here */
+height: 136px;
+background-color: #f5f5f5;
+}
+.admin-hidden {
+  display: none;
+}
+.admin-display {
+  display: inline-block;
+}
+.outlined {
+  border: 1px; solid red;
+}
